--- a/iPhone.html
+++ b/iPhone.html
@@ -39,7 +39,7 @@
         <div class="content">
           <div class="hinh1">
             <div class="img-responsive">
-              <video id="myVideo" src="path/to/video/ipvd3.mp4" autoplay muted playsinline></video>
+              <video id="myVideo" src="video/ipvd3.mp4" autoplay muted playsinline></video>
             </div>
              <div class="text-hinh1">
                <h2>iPhone 15 Pro</h2>
@@ -52,44 +52,44 @@
           </div>
           <div class="background2-content">
              <h2>Các điểm nổi bật.</h2>
-             <img src="path/to/img/ip2.png" class="content-img">
+             <img src="img/ip2.png" class="content-img">
              <p>iPhone 15 Pro Max với phạm vi thu phóng quang học dài nhất từng có ở iPhone. Cực ngầu.</p>
           </div>
 
           <div class="hinh6">
-            <img src="path/to/img/ip3.png" class="item-6">
+            <img src="img/ip3.png" class="item-6">
              <p>Khám phá  A17 Pro. Chip thay đổi cuộc chơi.Hiệu năng chấn động địa cầu</p>
           </div>
           <div class="hinh3">
-            <img src="path/to/img/ip5.png" class="item-3">
+            <img src="img/ip5.png" class="item-3">
                <p>Titan.Thật bền chắc. Thật nhẹ. Thật  Pro</p>
           </div>
 
           <div class="hinh4">
              <div class="tr-hinh4">
-              <img src="path/to/img/ip6.png" class="item-4">
+              <img src="img/ip6.png" class="item-4">
                <p>Nút Tác Vụ hoàn toàn mới Bạn định dùng làm gì?</p>
              </div>
           </div>
           <div class="hinh5">
                <h2>Ngắm nhìn cận cảnh.</h2>
-               <img src="path/to/img/ip7.png" class="item-5">           
+               <img src="img/ip7.png" class="item-5">           
           </div>
           <div class="hinh7">
              <h2>Khám phá tất cả.</h2>
-             <img src="path/to/img/ip8,2.png" class="item-8">
-             <img src="path/to/img/ip8.png" class="item-9">
-             <img src="path/to/img/ip8,1.png" class="item-10">
+             <img src="img/ip8,2.png" class="item-8">
+             <img src="img/ip8.png" class="item-9">
+             <img src="img/ip8,1.png" class="item-10">
              <p class="text-h7">iPhone 15 Pro là chiếc iPhone đầu tiên sở hữu thiết kế từ titan<br> chuẩn hàng không vũ trụ, cùng loại hợp kim sử dụng trong thiết <br>kế tàu vũ trụ cho các chuyến du hành đến Sao Hỏa. </p>
              <p class="text-h71">Titan là một trong những kim loại có tỷ số độ bền và trọng <br>lượng cao nhất, tạo nên những phiên bản Pro nhẹ nhất từng có<br> của chúng tôi. Bạn sẽ nhận biết được ngay sự khác biệt khi cầm<br> điện thoại trên tay. </p>
          </div>
          <div class="hinh8">
-          <img src="path/to/img/ip9.png" class="item-11">
+          <img src="img/ip9.png" class="item-11">
              <h2>Chip A17 Pro.<br>Chiến thắng khủng<br>cho game.</h2>
              <p>Đã có mặt.  Lần tái thiết kế lớn nhất trong lịch sử của Apple GPU.</p>
          </div>
          <div class="hinh9">
-          <video id="myVideo" src="path/to/video/ip vd.mp4" autoplay muted playsinline></video>
+          <video id="myVideo" src="video/ip vd.mp4" autoplay muted playsinline></video>
              <p class="h9-p">Honkai: Star Rail - 3T Online </p>
              <p class="h9-p1">A17 Pro là một đẳng cấp hoàn toàn<br> mới của chip iPhone, mang lại<br>hiệu năng đồ họa tốt nhất<br> của Apple, tính đến thời điểm này.</p>
              <p class="h9-p3">Các <samp class="h9c">game di động sẽ vô cùng<br> sống động và chân thực,</samp> với môi<br> trường chi tiết đến khó tin và các<br> nhân vật sống động hơn. Với tốc<br> độ và khả năng tiết kiệm điện<br> dẫn đầu thị trường, A17 Pro mạnh mẽ <br>kế thừa thế hệ trước.</p>
@@ -97,18 +97,18 @@
          </div>
          <div class="hinh10">
             <h2>Một camera bắt trọn những tưởng tượng bay bổng nhất của bạn.</h2>
-            <img src="path/to/img/ip11.jpg" class="item-12" >
+            <img src="img/ip11.jpg" class="item-12" >
             <p class="h10a">Từ khung hình linh hoạt ấn tượng đến ảnh chân dung thế hệ mới, hãy xem những điều bạn có thể làm được bằng hệ thống camera iPhone mạnh mẽ nhất. </p>
             <p class="h10b">Ảnh một con cự đà màu xanh lá, được chụp bằng camera Chính 48MP</p>
          </div>
          <div class="hinh11">
            <h2>Zoom Pro<br>đến 120 mm.</h2>
-           <video id="video" class="vd1" src="path/to/video/vd1.mp4" muted autoplay></video>
+           <video id="video" class="vd1" src="video/vd1.mp4" muted autoplay></video>
            <button id="playPauseBtn" class="play-pause-btn" onclick="togglePlayPause()">Tạm dừng <i class="ri-pause-circle-line"></i></button>
          </div>
          <div class="hinh12">
            <h2>Thời lượng pin <br>đúng Pro.</h2>
-           <video id="myVideo" src="path/to/img/vdip1.mp4" autoplay muted playsinline></video>
+           <video id="myVideo" src="video/vdip1.mp4" autoplay muted playsinline></video>
            <p>Ngay cả với rất nhiều tính năng mới tiên tiến, iPhone 15 Pro vẫn mang đến cho bạn thời lượng pin dùng cả ngày ấn tượng.</p>
            <a href="#">Xem trực tuyến Lực Lượng Nền Móng - Foundation trên ứng dụng Apple TV ></a>
            <p class="h12-text1">Thời gian xem video<br> lên đến<br><samp class="text1-1">29giờ</samp>
@@ -123,13 +123,13 @@
            <hr class="h12-hr">
            <p class="h12-text4">iPhone 15 Pro Max có thời gian<br> xem video nhiều hơn<br> iPhone 12 Pro Max đến 9 giờ</p>
            <p class="h12-text5">iPhone 15 Pro có thời gian xem<br> video nhiều hơn iPhone 12 Pro đến<br> 6 giờ</p>
-           <img class="hinh12-icon" src="path/to/img/icon.png">
+           <img class="hinh12-icon" src="img/icon.png">
          </div>
          <div class="hinh14">
             <h2>Tiếp tục khám phá iPhone.</h2>
             <div class="frame">
-              <img class="h14-h1" src="path/to/img/bip1.png" >
-              <img class="h14-h2" src="path/to/img/bip2.png" >  
+              <img class="h14-h1" src="img/bip1.png" >
+              <img class="h14-h2" src="img/bip2.png" >  
               <h2 class="h14-text1">iPhone 15 Pro</h2>
               <h2 class="h14-text2">iPhone 15</h2>
               <p class="h14-text3">Từ 28.999.000đ</p>
@@ -244,4 +244,3 @@
     </div>
 </body>
 </html>
-
