--- a/iPhone.html
+++ b/iPhone.html
@@ -39,7 +39,7 @@
         <div class="content">
           <div class="hinh1">
             <div class="img-responsive">
-              <video id="video1" src="video/ipvd3.mp4" autoplay muted playsinline></video>
+              <video id="video1" src="video/ipvd3.mp4" autoplay muted></video>
             </div>
              <div class="text-hinh1">
                <h2>iPhone 15 Pro</h2>
