--- a/iPhone.html
+++ b/iPhone.html
@@ -89,7 +89,7 @@
              <p>Đã có mặt.  Lần tái thiết kế lớn nhất trong lịch sử của Apple GPU.</p>
          </div>
          <div class="hinh9">
-           <video id="video2" src="video/ip vd.mp4" autoplay muted playsinline></video>
+           <video id="video2" src="video/ip vd.mp4" autoplay muted></video>
              <p class="h9-p">Honkai: Star Rail - 3T Online </p>
              <p class="h9-p1">A17 Pro là một đẳng cấp hoàn toàn<br> mới của chip iPhone, mang lại<br>hiệu năng đồ họa tốt nhất<br> của Apple, tính đến thời điểm này.</p>
              <p class="h9-p3">Các <samp class="h9c">game di động sẽ vô cùng<br> sống động và chân thực,</samp> với môi<br> trường chi tiết đến khó tin và các<br> nhân vật sống động hơn. Với tốc<br> độ và khả năng tiết kiệm điện<br> dẫn đầu thị trường, A17 Pro mạnh mẽ <br>kế thừa thế hệ trước.</p>
@@ -103,12 +103,12 @@
          </div>
          <div class="hinh11">
            <h2>Zoom Pro<br>đến 120 mm.</h2>
-           <img src="img/ip10.png" class="item-13" alt="Tinh chỉnh iPhone">
+           <video id="video" src="video/vd1.mp4" autoplay muted></video>
            <button id="playPauseBtn" class="play-pause-btn" onclick="togglePlayPause()">Tạm dừng <i class="ri-pause-circle-line"></i></button>
          </div>
          <div class="hinh12">
            <h2>Thời lượng pin <br>đúng Pro.</h2>
-           <video id="myVideo" src="video/vdip1.mp4" autoplay muted playsinline></video>
+           <video id="myVideo" src="video/vdip1.mp4" autoplay muted></video>
            <p>Ngay cả với rất nhiều tính năng mới tiên tiến, iPhone 15 Pro vẫn mang đến cho bạn thời lượng pin dùng cả ngày ấn tượng.</p>
            <a href="#">Xem trực tuyến Lực Lượng Nền Móng - Foundation trên ứng dụng Apple TV ></a>
            <p class="h12-text1">Thời gian xem video<br> lên đến<br><samp class="text1-1">29giờ</samp>
