--- a/iPad.html
+++ b/iPad.html
@@ -40,7 +40,7 @@
             </div>
             <div class="hinh1">
                 <div class="img-responsive">
-                  <video id="myVideo" src="D:\wed-vuPhiTung-2200002191\video\ipadPro.mp4" autoplay muted playsinline></video>
+                  <video id="myVideo" src="video/ipadPro.mp4" autoplay muted playsinline></video>
                 </div>
                 <div id="textContainer" class="text-hinh1">
                     <h2>iPad Pro<br>
@@ -57,7 +57,7 @@
                 <div class="slider">
                     <div class="list">
                         <div class="item">
-                            <img src="D:\wed-vuPhiTung-2200002191\img\iPad2.jpg" alt="">
+                            <img src="img/iPad2.jpg" alt="">
                             <div class="text-slider position3">
                                 <h2>Thiết kế pro hoàn toàn mới. Gọn nhẹ không ngờ.<br>
                                     Sản phẩm Apple mỏng nhất từ trước đến nay.
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img src="D:\wed-vuPhiTung-2200002191\img\iPad1.jpg" alt="">
+                            <img src="img/iPad1.jpg" alt="">
                             <div class="text-slider position1">
                                 <h2>Ultra Retina XDR. Màn hình tiên tiến hàng đầu.<br>
                                     Độ sáng cực đỉnh và độ tương phản chuẩn xác.
@@ -73,7 +73,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img src="D:\wed-vuPhiTung-2200002191\img\iPad5.jpg" alt="">
+                            <img src="img/iPad5.jpg" alt="">
                             <div class="text-slider position2">
                                 <h2>Giới thiệu chip Apple M4.<br>
                                     Hiệu năng như mơ,<br>
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img src="D:\wed-vuPhiTung-2200002191\img\iPad4.jpg" alt="">
+                            <img src="img/iPad4.jpg" alt="">
                             <div class="text-slider position4">
                                 <h2>Xử lý gọn ghẽ<br>
                                     những luồng công việc pro<br>
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img src="D:\wed-vuPhiTung-2200002191\img\iPad3.jpg" alt="">
+                            <img src="img/iPad3.jpg" alt="">
                             <div class="text-slider position5">
                                 <h2>Apple Pencil Pro hoàn toàn mới.<br>
                                     Nhiều tính năng mới nâng tầm sáng tạo.
@@ -116,12 +116,12 @@
             </div>
             <div class="hinh3">
                 <h2>Ngắm nhìn cận cảnh.</h2>
-                <img class="h3-img" src="D:\wed-vuPhiTung-2200002191\img\iPad6.jpg">
-                <img class="h3-img1" src="D:\wed-vuPhiTung-2200002191\img\iPad7.jpg">
+                <img class="h3-img" src="img/iPad6.jpg">
+                <img class="h3-img1" src="img/iPad7.jpg">
             </div> 
             <div class="hinh4">
                 <h2 class="h4-text">Khám phá tất cả.</h2>
-                <img class="h4-img" src="D:\wed-vuPhiTung-2200002191\img\hinh6.jpg">
+                <img class="h4-img" src="img/hinh6.jpg">
                 <h2 class="h4-text1">Siêu mỏng. Siêu bản lĩnh.</h2>
             </div>
             <div class="hinh5">
@@ -139,7 +139,7 @@
             <div class="hinh6">
                 <div class="frame">
                     <h2 class="h6-text">Màn hình tiên tiến<br> hàng đầu.</h2>
-                    <img class="h6-img" src="D:\wed-vuPhiTung-2200002191\img\iPad9.jpg" >
+                    <img class="h6-img" src="img/iPad9.jpg" >
                     <a href="#">Xem trực tuyến Vũ Trụ Xa Lạ - Constellation trên Apple TV+</a>
                     <h2 class="h6-text1">Màn hình Ultra Retina XDR mới mang đến công nghệ OLED hai lớp<br> đột phá. Độ sáng cực đỉnh, độ tương phản cực chuẩn xác, cùng các <br>công nghệ tiên tiến như ProMotion và True Tone mang lại cho bạn<br> trải nghiệm thị giác đẹp xuất thần. Và bạn có thể sử dụng Chế Độ <br>Tham Chiếu cho những luồng công việc đòi hỏi độ chính xác về<br> màu sắc.</h2>
                     <p class="h6-text2">Độ sáng toàn màn hình<br>
@@ -163,7 +163,7 @@
                     
                 </div>
                 <div class="frame1">
-                    <video class="video2" src="D:\wed-vuPhiTung-2200002191\video\iPadvd1.mp4" autoplay muted playsinline  preload="auto"></video>
+                    <video class="video2" src="video/iPadvd1.mp4" autoplay muted playsinline  preload="auto"></video>
                     <h2 class="h6-text8">Chip hỏa tiễn.</h2>
                     <p class="h6-text9">Giới thiệu <samp class="text9-samp">M4, Apple silicon thế hệ<br>mới</samp>, mang lại hiệu năng như mơ <br>trong thiết kế cực mỏng nhẹ của<br>iPad Pro. Bộ xử lý hiển thị hoàn <br> toàn mới cho phép đạt độ chính <br> xác, màu sắc và độ sáng ấn tượng.<br> GPU mạnh mẽ với công nghệ dò <br> tia tốc độ cao bằng phần cứng có <br>khả năng kết xuất những dự án đồ<br> họa thay đổi cuộc chơi. Và<br> Neural Engine trong M4 biến<br> iPad Pro trở thành một cỗ máy<br> mạnh mẽ tuyệt đối cho AI.</p>
                     <p class="h6-text10">Hiệu năng kết xuất chuyên<br> nghiệp nhanh hơn M2 đến<br>
@@ -177,10 +177,10 @@
             <div class="hinh7">
                 <h2>Tiếp tục khám phá iPad.</h2>
                 <div class="frame2">
-                  <img class=" h7-img" src="D:\wed-vuPhiTung-2200002191\img\iPad11.jpg">
+                  <img class=" h7-img" src="img/iPad11.jpg">
                   <p class="h7-text1">Mới</p>
                   <p class="h7-text2">Mới</p>
-                  <img class="h7-img1" src="D:\wed-vuPhiTung-2200002191\img\iPad12.jpg">
+                  <img class="h7-img1" src="img/iPad12.jpg">
                   <p class="h7-text3">iPad Pro</p>
                   <p class="h7-text4">iPad Air</p>
                   
