--- a/mua.html
+++ b/mua.html
@@ -41,16 +41,16 @@
         <div class="slider">
             <div class="list">
                 <div class="item">
-                    <img src="D:\wed-vuPhiTung-2200002191\img\mua1.jpg" alt="">
+                    <img src="img/mua1.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="D:\wed-vuPhiTung-2200002191\img\mua2.jpg" alt="">
+                    <img src="img/mua2.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="D:\wed-vuPhiTung-2200002191\img\mua3.jpg" alt="">
+                    <img src="img/mua3.jpg" alt="">
                 </div>
                 <div class="item">
-                    <img src="D:\wed-vuPhiTung-2200002191\img\mua4.jpg" alt="">
+                    <img src="img/mua4.jpg" alt="">
                 </div>
             </div>
             <div class="buttons">
@@ -149,7 +149,7 @@
     <footer class="footer">
        <div class="m1">
           <h2>iPhone 15 Pro mới của<br> bạn.<br>Theo cách bạn muốn.</h2>
-          <img src="D:\wed-vuPhiTung-2200002191\img\f1.png">
+          <img src="img/f1.png">
        </div>
        <div class="m2">
           <h4>iPhone 15 Pro 128GB Titan Tự Nhiên</h4>  
@@ -180,7 +180,7 @@
     <div class="f2">
         <div class="pd">
             <h1>Trong hộp có gì</h1>
-            <img src="D:\wed-vuPhiTung-2200002191\img\pk.png">
+            <img src="img/pk.png">
             <div class="pd-text">
                 <p class="i">iPhone 15 Pro</p>
                 <p class="i">Cáp Sạc USB-C</p>
@@ -188,7 +188,7 @@
         </div>
         <div class="pd2">
             <h1>iPhone nào phù hợp với bạn?</h1>
-            <img src="D:\wed-vuPhiTung-2200002191\img\f3.png">
+            <img src="img/f3.png">
             <div class="pd2-text-wrapper">
                 <p class="q">Mới</p>
                 <p class="qq">Mới</p>
