--- a/mua.html
+++ b/mua.html
@@ -40,18 +40,10 @@
     <main>
         <div class="slider">
             <div class="list">
-                <div class="item">
-                    <img src="img/mua1.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img src="img/mua2.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img src="img/mua3.jpg" alt="">
-                </div>
-                <div class="item">
-                    <img src="img/mua4.jpg" alt="">
-                </div>
+                <div class="item"><img src="img/mua1.jpg" alt="Image 1"></div>
+                <div class="item"><img src="img/mua2.jpg" alt="Image 2"></div>
+                <div class="item"><img src="img/mua3.jpg" alt="Image 3"></div>
+                <div class="item"><img src="img/mua4.jpg" alt="Image 4"></div>
             </div>
             <div class="buttons">
                 <button id="prev"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="rgba(148,141,180,1)"><path d="M10.8284 12.0007L15.7782 16.9504L14.364 18.3646L8 12.0007L14.364 5.63672L15.7782 7.05093L10.8284 12.0007Z"></path></svg></button>
@@ -149,7 +141,7 @@
     <footer class="footer">
        <div class="m1">
           <h2>iPhone 15 Pro mới của<br> bạn.<br>Theo cách bạn muốn.</h2>
-          <img src="img/f1.png">
+          <img src="img/f1.png" alt="iPhone 15 Pro">
        </div>
        <div class="m2">
           <h4>iPhone 15 Pro 128GB Titan Tự Nhiên</h4>  
@@ -180,7 +172,7 @@
     <div class="f2">
         <div class="pd">
             <h1>Trong hộp có gì</h1>
-            <img src="img/pk.png">
+            <img src="img/pk.png" alt="Trong hộp có gì">
             <div class="pd-text">
                 <p class="i">iPhone 15 Pro</p>
                 <p class="i">Cáp Sạc USB-C</p>
@@ -188,7 +180,7 @@
         </div>
         <div class="pd2">
             <h1>iPhone nào phù hợp với bạn?</h1>
-            <img src="img/f3.png">
+            <img src="img/f3.png" alt="iPhone">
             <div class="pd2-text-wrapper">
                 <p class="q">Mới</p>
                 <p class="qq">Mới</p>
