--- a/iPad.html
+++ b/iPad.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bán iPad <title>
+    <title>Bán iPad</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="iPad.css">
 </head>
@@ -57,7 +57,7 @@
                 <div class="slider">
                     <div class="list">
                         <div class="item">
-                            <img src="img/iPad2.jpg" alt="">
+                            <img src="img/iPad2.jpg" alt="Thiết kế pro">
                             <div class="text-slider position3">
                                 <h2>Thiết kế pro hoàn toàn mới. Gọn nhẹ không ngờ.<br>
                                     Sản phẩm Apple mỏng nhất từ trước đến nay.
@@ -65,7 +65,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img src="img/iPad1.jpg" alt="">
+                            <img src="img/iPad1.jpg" alt="Ultra Retina XDR">
                             <div class="text-slider position1">
                                 <h2>Ultra Retina XDR. Màn hình tiên tiến hàng đầu.<br>
                                     Độ sáng cực đỉnh và độ tương phản chuẩn xác.
@@ -73,7 +73,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img src="img/iPad5.jpg" alt="">
+                            <img src="img/iPad5.jpg" alt="Apple M4">
                             <div class="text-slider position2">
                                 <h2>Giới thiệu chip Apple M4.<br>
                                     Hiệu năng như mơ,<br>
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img src="img/iPad4.jpg" alt="">
+                            <img src="img/iPad4.jpg" alt="iPadOS">
                             <div class="text-slider position4">
                                 <h2>Xử lý gọn ghẽ<br>
                                     những luồng công việc pro<br>
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                         <div class="item">
-                            <img src="img/iPad3.jpg" alt="">
+                            <img src="img/iPad3.jpg" alt="Apple Pencil Pro">
                             <div class="text-slider position5">
                                 <h2>Apple Pencil Pro hoàn toàn mới.<br>
                                     Nhiều tính năng mới nâng tầm sáng tạo.
@@ -116,16 +116,16 @@
             </div>
             <div class="hinh3">
                 <h2>Ngắm nhìn cận cảnh.</h2>
-                <img class="h3-img" src="img/iPad6.jpg">
-                <img class="h3-img1" src="img/iPad7.jpg">
+                <img class="h3-img" src="img/iPad6.jpg" alt="Ngắm nhìn">
+                <img class="h3-img1" src="img/iPad7.jpg" alt="cận cảnh">
             </div> 
             <div class="hinh4">
                 <h2 class="h4-text">Khám phá tất cả.</h2>
-                <img class="h4-img" src="img/hinh6.jpg">
+                <img class="h4-img" src="img/hinh6.jpg" alt="Khám phá tất cả">
                 <h2 class="h4-text1">Siêu mỏng. Siêu bản lĩnh.</h2>
             </div>
             <div class="hinh5">
-                <img src="D:\wed-vuPhiTung-2200002191\img\iPad8.jpg">
+                <img src="D:\wed-vuPhiTung-2200002191\img\iPad8.jpg" alt="Mạnh mẽ">
                 <h2>Mạnh mẽ.<br> Gọn nhẹ.</h2>
                 <p>iPad Pro kết hợp hiệu năng đẳng<br>
                     cấp mới với thiết kế trang nhã để <br>
@@ -139,7 +139,7 @@
             <div class="hinh6">
                 <div class="frame">
                     <h2 class="h6-text">Màn hình tiên tiến<br> hàng đầu.</h2>
-                    <img class="h6-img" src="img/iPad9.jpg" >
+                    <img class="h6-img" src="img/iPad9.jpg" alt="tiên tiến">
                     <a href="#">Xem trực tuyến Vũ Trụ Xa Lạ - Constellation trên Apple TV+</a>
                     <h2 class="h6-text1">Màn hình Ultra Retina XDR mới mang đến công nghệ OLED hai lớp<br> đột phá. Độ sáng cực đỉnh, độ tương phản cực chuẩn xác, cùng các <br>công nghệ tiên tiến như ProMotion và True Tone mang lại cho bạn<br> trải nghiệm thị giác đẹp xuất thần. Và bạn có thể sử dụng Chế Độ <br>Tham Chiếu cho những luồng công việc đòi hỏi độ chính xác về<br> màu sắc.</h2>
                     <p class="h6-text2">Độ sáng toàn màn hình<br>
@@ -177,10 +177,10 @@
             <div class="hinh7">
                 <h2>Tiếp tục khám phá iPad.</h2>
                 <div class="frame2">
-                  <img class=" h7-img" src="img/iPad11.jpg">
+                  <img class=" h7-img" src="img/iPad11.jpg" alt="vip">
                   <p class="h7-text1">Mới</p>
                   <p class="h7-text2">Mới</p>
-                  <img class="h7-img1" src="img/iPad12.jpg">
+                  <img class="h7-img1" src="img/iPad12.jpg" alt="pro">
                   <p class="h7-text3">iPad Pro</p>
                   <p class="h7-text4">iPad Air</p>
                   
