--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <button class="button button2" onclick="window.location.href='iPhone15.html'">Tìm hiểu thêm</button>
         </div>
       </div>
-
+      <div class="custom-divider"></div>
       <div class="hinh6">
         <img src="img/hinh6.jpg" class="item-6" alt="iPad Pro">
         <div class="text-hinh6">
@@ -190,6 +190,11 @@
         </div>
       </div>
     </div>
+  </div>
+  <script src="script.js"></script>
+</body>
+</html>
+
   </div>
   <script src="script.js"></script>
 </body>
