--- a/iPad.html
+++ b/iPad.html
@@ -125,7 +125,7 @@
                 <h2 class="h4-text1">Siêu mỏng. Siêu bản lĩnh.</h2>
             </div>
             <div class="hinh5">
-                <img src="D:\wed-vuPhiTung-2200002191\img\iPad8.jpg" alt="Mạnh mẽ">
+                <img src="img/iPad8.jpg" alt="Mạnh mẽ">
                 <h2>Mạnh mẽ.<br> Gọn nhẹ.</h2>
                 <p>iPad Pro kết hợp hiệu năng đẳng<br>
                     cấp mới với thiết kế trang nhã để <br>
